Dummy_Package_for_scratch_org/main/default/objects/Filter__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>