Dummy_Package_for_scratch_org/main/default/objects/Filter__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Filtering parameters stored in JSON format.</description>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>