Dummy_Package_for_scratch_org/main/default/objects/Filter__c/fields/Share_With__c.field-meta.xml
<CustomField>
    <fullName>Share_With__c</fullName>
    <label>Share With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Me</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>